fix(chat): remove empty area after message list this fixes autoscroll not goint all the way to end of the scrollbar

--- a/bigbluebutton-html5/imports/ui/components/chat/time-window-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/time-window-list/styles.scss
@@ -39,12 +39,6 @@
     margin: 0 0 0 auto;
     padding: 0 0 0 var(--md-padding-x);
   }
-
-  &:after {
-    content: "";
-    display: block;
-    height: var(--md-padding-x);
-  }
 }
 
 .unreadButton {
